examples/neg/named_args_unknown.effekt
def length(x: Double, y: Double): Double = sqrt(x * x + y * y)

def hof { msr: (Double, Double) => Double }: Double =
  msr(x = 3.0, y = 4.0) // ERROR named argument

def main() = {
  println(hof{length})
}